<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_titulo_registro"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_seleccion_producto"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Spinner
	     android:id="@+id/spinnerProductosReg"
	     android:layout_width="match_parent"
	     android:layout_height="34dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_seleccion_presentacion"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Spinner
	     android:id="@+id/spinnerPresentacionesReg"
	     android:layout_width="match_parent"
	     android:layout_height="34dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cantidad_producto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextCantidadReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnRegistrarConsumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrar_consumo"
        android:onClick="registrarConsumo" />

</LinearLayout>
